clusters/k4/kubernetes/apps/monitoring/victoria-metrics/metrics/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vmks-metrics-smartctl
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vmks
      app.kubernetes.io/name: vmagent
  egress:
    - toCIDR:
        - 192.168.0.5/32
      toPorts:
        - ports:
            - port: "9633"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vmks-metrics-doco-cd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vmks
      app.kubernetes.io/name: vmagent
  egress:
    - toCIDR:
        - 192.168.0.2/32
        - 192.168.0.3/32
        - ${SECRET_TRUENAS_CIDR}
      toPorts:
        - ports:
            - port: "9120"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vmks-sync-job
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vmks
      app.kubernetes.io/name: vmks
      app.kubernetes.io/component: syncJob
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
    - toEntities:
        - kube-apiserver
